# potenup3-agentwt

./: .env copy  .gitignore  20260416_임경빈.ipynb  20260417_임경빈.ipynb  20260421_임경빈.ipynb  agentwt_1.ipynb  agentwt_10_route.ipynb  agentwt_2.ipynb  agentwt_2_navershop.ipynb  agentwt_3_memory.ipynb  agentwt_3_movie.ipynb  agentwt_4_middleware.ipynb  agentwt_5_middleware.ipynb  agentwt_6_rag1.ipynb  agentwt_7_rag2.ipynb  agentwt_7_rag_final.ipynb  agentwt_8_langgraph1.ipynb  agentwt_9_conditional_edges.ipynb  main.py  note.ipynb  pyproject.toml
my_chroma_db/: chroma.sqlite3
student_chroma_db/: chroma.sqlite3
