[project]
name = "potenup3-agentwt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "langchain[anthropic,google-genai]>=1.2.15",
    "langchain-openai>=1.1.13",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
]
