[project]
name = "potenup3-agentwt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "langchain[anthropic,google-genai]>=1.2.15",
    "langchain-openai>=1.1.13",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "langchain-google-community[gmail]>=3.0.5",
    "ddgs>=9.13.1",
    "langchain-community>=0.4.1",
    "youtube-search>=2.2.0",
    "langgraph>=1.1.8",
    "duckduckgo-search>=8.1.1",
    "langchain-google-vertexai>=3.2.2",
    "pymupdf>=1.27.2.3",
    "unstructured>=0.22.23",
    "openpyxl>=3.1.5",
    "langchain-docling>=2.0.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-chroma>=1.1.0",
    "chromadb>=1.5.8",
]
